// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#Text html 1`] = `
<Text>
  <Translate
    html={true}
    t="lol"
    values={Object {}}
  />
</Text>
`;

exports[`#Text string 1`] = `
<Text>
  <Translate
    html={false}
    t="lol"
    values={Object {}}
  />
</Text>
`;
